--- a/WorkFlowManager.Web/packages.config
+++ b/WorkFlowManager.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="AutoMapper" version="5.2.0" targetFramework="net451" />
   <package id="bootstrap" version="3.4.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="FluentValidation" version="6.2.1.0" targetFramework="net451" />
   <package id="Hangfire" version="1.6.19" targetFramework="net451" />
   <package id="Hangfire.Autofac" version="2.3.1" targetFramework="net451" />
   <package id="Hangfire.Core" version="1.6.19" targetFramework="net451" />
@@ -16,9 +17,9 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.0" targetFramework="net451" />
@@ -58,7 +59,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="System.Buffers" version="4.0.0" targetFramework="net451" />
